--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,3 +19,14 @@ services:
       - ./postgres_data:/var/lib/postgresql/data
     ports:
       - 5432:5432
+  metabase:
+    image: metabase/metabase:latest
+    ports:
+      - "127.0.0.1:3000:3000"
+    volumes:
+      - metabase:/metabase-data
+    environment:
+        - MB_DB_FILE=/metabase-data/metabase.db
+volumes:
+  metabase:
+    external: true
